@@ -1,3 +1,10 @@
+Thu Mar 27 11:58:55 2014  NARUSE, Yui  <naruse@ruby-lang.org>
+
+	* addr2line.c (fill_lines): check shdr[i].sh_type because even if
+	  .symtab section exists, the section's type can be SHT_NOBITS and
+	  actual data doesn't exist in the file.
+	  revert r45441.
+
 Wed Mar 26 14:57:35 2014  NAKAMURA Usaku  <usa@ruby-lang.org>
 
 	* parse.y: inline must be static (for mswin).
